[project]
name = "palimpzest"
version = "0.5.3"  # if you update this, be sure to update package version in `docs/source/conf.py` as well
description = "Palimpzest is a system which enables anyone to process AI-powered analytical queries simply by defining them in a declarative language"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["relational", "optimization", "llm", "AI programming", "extraction", "tools", "document", "search", "integration"]
authors = [
    {name="MIT DSG Semantic Management Lab", email="michjc@csail.mit.edu"},
]
dependencies = [
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "click-aliases>=1.0.4",
    "colorama>=0.4.6",
    "fastapi~=0.115.0",
    "fuzzywuzzy>=0.18.0",
    "google-generativeai>=0.8.0",
    "gradio>=4.20.1",
    "grobid-client-python==0.0.5",
    "ipython>=8.26.0",
    "opencv-python-headless>=4.8.0,<4.9.0",
    "jupyter",
    "layoutparser>=0.3.4",
    "lxml-html-clean>=0.1.1",
    "modal>=0.62.198",
    "ncls==0.0.68",
    "necessary>=0.3.2",
    "numpy>=1.23.2",
    "openai>=1.0",
    "openpyxl==3.1.2",
    "pandas>=2.1.1",
    "papermage>=0.16.0",
    "pdf2image",
    "pytest>=8.2.2",
    "pypdf==4.3.1",
    "python-Levenshtein",
    "pdfplumber==0.7.4",
    "pillow>=10.2.0",
    "prettytable>=3.9.0",
    "PyLD>=2.0.4",
    "pyarrow>=13.0.0,<15.0.0; python_version<'3.12'",
    "pyarrow>=15.0.0,<19.0.0; python_version>='3.12'",
    "pytest-mock>=3.14.0",
    "python-Levenshtein>=0.25.1",
    "pyyaml>=6.0.1",
    "requests>=2.25",
    "requests-html>=0.10.0",
    "ruff>=0.9.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.9.0",
    "setuptools>=70.1.1",
    "tabulate>=0.9.0",
    "tenacity>=8.2.3",
    "together>=1.3.1",
    # "torch>=1.9.0",
    "tqdm~=4.66.1",
    "transformers>=4.11.3",
    "requests-html",
    "sphinx>=8.1.3",
    # Add other dependencies as needed
]
classifiers=[
    "Development Status :: 4 - Beta",  # Change as appropriate
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",  # Change as appropriate
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",  # Specify versions you support
    # Add more classifiers as appropriate
]

[project.scripts]
pz = "cli.cli_main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md"]


[tool.pytest.ini_options]
testpaths = ["tests/pytest"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::UserWarning",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/mitdbg/palimpzest/"
repository = "https://github.com/mitdbg/palimpzest/"
# documentation = "https://readthedocs.org"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
