[project]
name = "palimpzest"
version = "0.7.16"
description = "Palimpzest is a system which enables anyone to process AI-powered analytical queries simply by defining them in a declarative language"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["relational", "optimization", "llm", "AI programming", "extraction", "tools", "document", "search", "integration"]
authors = [
    {name="MIT DSG Semantic Management Lab", email="michjc@csail.mit.edu"},
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=0.6.3",
    "colorama>=0.4.6",
    "fastapi~=0.115.0",
    "gradio>=5.26.0",
    "numpy==2.0.2",
    "openai>=1.0",
    "pandas>=2.1.1",
    "pytest>=8.2.2",
    "pillow>=11.3.0",
    "prettytable>=3.9.0",
    "psutil==5.9.5",
    "PyLD>=2.0.4",
    "pyarrow>=21.0.0",
    "pypdf>=5.1.0",
    "pytest-mock>=3.14.0",
    "pyyaml>=6.0.1",
    "requests>=2.25",
    "ruff>=0.9.0",
    "sentence-transformers>=4.1.0",
    "setuptools>=70.1.1",
    "tabulate>=0.9.0",
    "together>=1.5.5",
    "tqdm~=4.66.1",
    "rich[jupyter]>=13.9.2",
]
classifiers=[
    "Development Status :: 4 - Beta",  # Change as appropriate
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",  # Change as appropriate
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",  # Specify versions you support
    # Add more classifiers as appropriate
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.3",
    "mkdocstrings-python>=1.15.0",
    "mkdocs-material[imaging]",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md"]


[tool.pytest.ini_options]
testpaths = ["tests/pytest"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::UserWarning",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://palimpzest.org"
repository = "https://github.com/mitdbg/palimpzest/"
documentation = "https://palimpzest.org"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
